--- a/src/main/resources/views/instellingenStuff/instellingenView.fxml
+++ b/src/main/resources/views/instellingenStuff/instellingenView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="831.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.instellingenStuff.InstellingenViewController">
+<AnchorPane prefHeight="831.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.instellingenStuff.InstellingenViewController">
    <children>
       <Pane layoutX="15.0" layoutY="14.0" prefHeight="100.0" prefWidth="1250.0">
          <children>
@@ -18,7 +18,7 @@
                   <Font size="8.0" />
                </font>
             </Button>
-            <TextField fx:id="editField0" layoutX="461.0" layoutY="-1.0" prefHeight="102.0" prefWidth="519.0">
+            <TextField fx:id="editField0" layoutX="461.0" prefHeight="102.0" prefWidth="519.0">
                <font>
                   <Font size="48.0" />
                </font>
@@ -42,7 +42,7 @@
                        <Font size="8.0" />
                    </font>
                </Button>
-               <TextField fx:id="editField1" layoutX="461.0" layoutY="-1.0" prefHeight="102.0" prefWidth="519.0">
+               <TextField fx:id="editField1" layoutX="461.0" prefHeight="102.0" prefWidth="519.0">
                    <font>
                        <Font size="48.0" />
                    </font>
@@ -66,7 +66,7 @@
                        <Font size="8.0" />
                    </font>
                </Button>
-               <TextField fx:id="editField2" layoutX="461.0" layoutY="-1.0" prefHeight="102.0" prefWidth="519.0">
+               <TextField fx:id="editField2" layoutX="461.0" prefHeight="102.0" prefWidth="519.0">
                    <font>
                        <Font size="48.0" />
                    </font>
@@ -90,7 +90,7 @@
                        <Font size="8.0" />
                    </font>
                </Button>
-               <TextField fx:id="editField3" layoutX="461.0" layoutY="-1.0" prefHeight="102.0" prefWidth="519.0">
+               <TextField fx:id="editField3" layoutX="461.0" prefHeight="102.0" prefWidth="519.0">
                    <font>
                        <Font size="48.0" />
                    </font>
@@ -114,7 +114,7 @@
                        <Font size="8.0" />
                    </font>
                </Button>
-               <TextField fx:id="editField4" layoutX="461.0" layoutY="-1.0" prefHeight="102.0" prefWidth="519.0">
+               <TextField fx:id="editField4" layoutX="461.0" prefHeight="102.0" prefWidth="519.0">
                    <font>
                        <Font size="48.0" />
                    </font>
@@ -138,7 +138,7 @@
                        <Font size="8.0" />
                    </font>
                </Button>
-               <TextField fx:id="editField5" layoutX="461.0" layoutY="-1.0" prefHeight="102.0" prefWidth="519.0">
+               <TextField fx:id="editField5" layoutX="461.0" prefHeight="102.0" prefWidth="519.0">
                    <font>
                        <Font size="48.0" />
                    </font>
@@ -150,14 +150,19 @@
                </Button>
            </children>
        </Pane>
-      <Button fx:id="newFeut" layoutX="600.0" layoutY="680.0" mnemonicParsing="false" onAction="#newFeut" prefHeight="140.0" prefWidth="600.0" text="Nieuwe Feut">
+      <Button fx:id="newFeut" layoutX="306.0" layoutY="680.0" mnemonicParsing="false" onAction="#newFeut" prefHeight="140.0" prefWidth="600.0" text="Nieuwe Feut">
          <font>
             <Font size="64.0" />
          </font>
       </Button>
-      <Button fx:id="TransactionViewButton" layoutX="160.0" layoutY="680.0" mnemonicParsing="false" onAction="#TransactionView" prefHeight="140.0" prefWidth="291.0" text="Geschiedenis">
+      <Button fx:id="TransactionViewButton" layoutX="14.0" layoutY="680.0" mnemonicParsing="false" onAction="#TransactionView" prefHeight="140.0" prefWidth="291.0" text="Geschiedenis">
          <font>
             <Font size="36.0" />
          </font></Button>
+      <Button fx:id="birthDayButton" layoutX="908.0" layoutY="680.0" mnemonicParsing="false" onAction="#birthDayView" prefHeight="140.0" prefWidth="356.0" text="Verjaardag invoeren" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
