--- a/src/main/resources/views/extrasStuff/barChartView.fxml
+++ b/src/main/resources/views/extrasStuff/barChartView.fxml
@@ -2,16 +2,10 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="689.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.extrasStuff.BarChartViewController">
+<AnchorPane prefHeight="689.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.extrasStuff.BarChartViewController">
    <children>
       <VBox fx:id="container" layoutX="1.0" layoutY="1.0" prefHeight="689.0" prefWidth="1250.0" />
-      <Button fx:id="updateButton" layoutX="1013.0" layoutY="610.0" mnemonicParsing="false" onAction="#update" prefHeight="80.0" prefWidth="240.0" text="Update">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
+      <Slider fx:id="yearSlider" layoutX="14.0" layoutY="650.0" majorTickUnit="1.0" max="1.0" minorTickCount="1" onMouseReleased="#yearUpdate" prefHeight="30.0" prefWidth="250.0" showTickMarks="true" snapToTicks="true" />
    </children>
 </AnchorPane>
