--- a/src/main/resources/views/extrasStuff/lineChartView.fxml
+++ b/src/main/resources/views/extrasStuff/lineChartView.fxml
@@ -13,5 +13,6 @@
             <Font size="24.0" />
          </font>
       </Button>
+      <Slider fx:id="yearSlider" layoutX="14.0" layoutY="650.0" majorTickUnit="1.0" max="1.0" minorTickCount="1" onMouseReleased="#yearUpdate" prefHeight="30.0" prefWidth="250.0" showTickMarks="true" snapToTicks="true" />
    </children>
 </AnchorPane>
