--- a/src/main/resources/views/mainView.fxml
+++ b/src/main/resources/views/mainView.fxml
@@ -14,7 +14,7 @@
                   <Font size="22.0" />
                </font>
             </Button>
-            <Label fx:id="messageBoard" alignment="CENTER" contentDisplay="CENTER" layoutX="645.0" layoutY="3.0" prefHeight="115.0" prefWidth="470.0" text="AppieZicht" wrapText="true">
+            <Label fx:id="messageBoard" alignment="CENTER" contentDisplay="CENTER" layoutX="645.0" layoutY="3.0" prefHeight="115.0" prefWidth="373.0" text="AppieZicht" wrapText="true">
                <font>
                   <Font size="24.0" />
                </font>
@@ -43,6 +43,11 @@
                <font>
                   <Font size="10.0" />
                </font></Text>
+            <Button fx:id="screenOffButton" layoutX="1020.0" mnemonicParsing="false" onAction="#screenOff" prefHeight="120.0" prefWidth="100.0" style="-fx-background-color: #ff0000;" text="X">
+               <font>
+                  <Font name="System Bold" size="36.0" />
+               </font>
+            </Button>
          </children>
       </Pane>
    </children>
